MB-42506: Account for FrameInfo with DCP OSO + StreamID

The OSO marker message must include the FrameInfo size in the
Producer 'ack-buffer' when a stream-id is used.

Change-Id: I879f4c5704d249bcd1ddfa2508fd4a96e4438895
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/140355
Reviewed-by: Richard de Mellow <richard.demellow@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>