engines/ep/src/dcp/response.h
@@ -1221,7 +1221,8 @@ public:
     }
 
     uint32_t getMessageSize() const override {
-        return baseMsgBytes;
+        return baseMsgBytes +
+               (getStreamId() ? sizeof(cb::mcbp::DcpStreamIdFrameInfo) : 0);
     }
 
     static const uint32_t baseMsgBytes;
